# Synth-fuse

./: .gitignore  CHANGELOG.md  CITATION.CFF  README.md  SPELLCARD.md  lb.sh  lrs.sh  pyproject.toml  pytest.ini  repro.py  setup.py  srcsynthfusecabinetroles__init__.py  srcsynthfusecabinetrolesarchitect.py  srcsynthfusecabinetrolesbody.py  srcsynthfusecabinetrolesengineer.py  srcsynthfusecabinetrolesjury.py  srcsynthfusecabinetroleslibrarian.py  srcsynthfusecabinetrolesphysician.py  srcsynthfusecabinetrolesshield.py  v.sh
.github/workflows/: Publish-Python-Package.yml  python-package.yml  python-publish.yml
alchemj/plugins/: orion.py  rl.py
lab/: app.py
os/: __init__.py
recipes/ns_aquaforte/: benchmarks.py
security/: open-gate.py  security.md
src/synthfuse/: README.md  __init__.py  __main__.py  alchemj.py  cabinet.py  llm-manifest.md  llm-read.md  requirements.dev.txt  session_logger.py
src/synthfuse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/synthfuse/agents/: __init__.py  base.py  hologram.py  hub.py  open_gate.py
src/synthfuse/agents/local/: __init__.py  ferros.py  ray_fusion.py  tensor_fusion.py
src/synthfuse/alchemist/: aethel_bridge.py
src/synthfuse/alchemj/: __init__.py  ast.py  combinators.py  compiler.py  constraints.py  distributed.py  evolution.py  fitness.py  grammar.lark  meta_grammar.py  registry.py
src/synthfuse/alchemj/fitness/: optimization.py  signal.py
src/synthfuse/alchemj/plugins/: __init__.py  math.py  numeric.py  orion.py  rl.py  sat.py  sql.py  swarm.py  util.py  vector.py
src/synthfuse/cabinet/: __init__.py  cabinet_orchestrator.py
src/synthfuse/cabinet/roles/: architect.py  body.py  engineer.py  jury.py  librarian.py  physician.py  shield.py
src/synthfuse/databases/: sql_parser.rs
src/synthfuse/docs/: FILE_REGISTRY_v0.4.0.md  FILE_REGISTRY_v0.5.0.md  LLM_GUIDE_v0.3.md  LLM_GUIDE_v0.4.md  SESSION_SIGILS_v0.4.0.md  alchemj-module.md  algebraic_specs.md  cabinet-module-doc.md  geometry-module-documentation.md  specs.md
src/synthfuse/docs/archives/: releasev0_2.md
src/synthfuse/forum/: __init__.py  arena.py  hologram.py
src/synthfuse/forum/protocols/: consensus.py  memory.py  turn.py
src/synthfuse/geometry/: camera_utils.py  primitives.py  ray_tracer.py
src/synthfuse/ingest/: manager.py
src/synthfuse/lab/: app.py
src/synthfuse/lab/instruments/: base.py  systemic_monitor.py  weight_kurve.py
src/synthfuse/meta/: README.md  __init__.py  constitution.py  diagnostic.py  diagnostics.py  engineer_alchemist.py  gradient_clip.py  meta_alchemist.py  regulator.py  rollback.py  safe_macro.py  self_documentation_oracle.py  sql_constitution.py  sql_diagnostics.py  zeta_alchemist.py
src/synthfuse/neural_substrate/: ai_cortex.py
src/synthfuse/notebook/: README.md  cell.py  checkpoint.py  kernel.py  sql_widgets.py  synthfuse_native_notebook.ipynb  viz.py  widgets.py
src/synthfuse/os/: __init__.py  kernel.py
src/synthfuse/pipeline/: fluid_ingestion.py  unified_vector_pipeline.py
src/synthfuse/prototype/images/: README.md  fusion_pipeline.py
src/synthfuse/realms/: __init__.py  automode.py  factory.py  lab.py  playground.py  thermo.py
src/synthfuse/recipes/: aquaorion_llm.py  auto_fusion.py  bio_fusion.py  ca_svd_ukf.py  canch.py  ccc_sigil.py  conv_lstm_ae.py  crypto_fusion.py  deceptive_immune_system.py  dl4sci_fusion.py  edge_fusion.py  elixir_1_neuro_swarm.py  elixir_2_autobio.py  elixir_3_chaotic_verification.py  elixir_4_flow_fed.py  elixir_6_spectral.py  fql_rime.py  gmm_poly_reg.py  graph_fusion.py  iso_vns.py  llm-recipe.md  meta_fusion.py  mrbmo_ppo.py  poly_svr_tree.py  quantconnect_recipe.py  rbc_circulatory_intelligence.py  rflf.py  robo_fusion.py  shimmy_fusion.py  sovereign_economic_governance.py  syn_fusion.py  test_elixir_3.py  thermal_hardened_trainer.py  time_fusion.py
src/synthfuse/recipes /: knn_boost_rf.py
src/synthfuse/recipes/benchmarks/: sudoku_9x9_generator.py
src/synthfuse/recipes/ns_aquaforte/: __init__.py  core.py  phase_detection.py  solvers.py
src/synthfuse/recipes/retraining/: README.md  darts_r.py  nc_retrain.py  ntk_retrain.py  qir.py  thermo_meta.py
src/synthfuse/rust/: Cargo.toml
src/synthfuse/rust/src/: lib.rs
src/synthfuse/security/: __init__.py  holographic_interface.py  open_gate.py
src/synthfuse/session/: session.md
src/synthfuse/sigils/: compiler.py
src/synthfuse/solvers/: scp.py
src/synthfuse/sql/: bridge.py  constraint_mapper.py
src/synthfuse/synthfuse.egg-info/: top_level.txt
src/synthfuse/systems/: README.md  __init__.py  algebraic_cortex.py  archiever.py  archiver.py  bench.py  cmapp_z.py  economic_cortex.py  erudite.py  gatekeeper.py  kappa_verifier.py  ns2uo.py  ntep.py  omega_gossip.py  oracle_bridge.py  quorum.py  sigma_hls.py  stcl.py  thermo_mesh.py  wr_sso.py
src/synthfuse/tests/: test_constrained_evolution.py  test_distributed_meta_evolution.py  test_erasure_protection.py  test_evolution.py  test_fitness.py  test_v04_algorithms.py
src/synthfuse/tools/: export.py  repl.py  viz.py
src/synthfuse/tools/foundation/: config.py  decorators.py  io_utils.py  loggin_utils.py  math_utils.py  random_utils.py  registry.py  timing.py
src/synthfuse/vector/: lazy_tensor_scp.py  manifold_nro.py  temporal_decay_rgf.py
synthfuse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
systems/: bench.py  ns2uo.py  ntep.py  stcl.py
tools/: monitor.py
