[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthfuse"
version = "0.1.0"
description = "Single-kernel algorithm fusion for JAX: swarm, RL, and numerical hybrids"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "J. Roberto Jimenez", email = "tijuanapaint@gmail.com"},
    {name = "Kimi-K2", email = "kimi@moonshot.cn"}
]
keywords = ["jax", "fusion", "swarm", "rl", "optimization", "sat", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]

dependencies = [
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "optax>=0.1.7",
    "chex>=0.1.84",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "anthropic>=0.18.0",
    "lark>=1.1.8",
    "svgwrite>=1.4.3",
    "rich>=13.0",
    "pandas>=2.0.0",
    "python-sat>=0.1.8.dev1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.8"
]

bench = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0"
]

llm-cloud = [
    "anthropic>=0.18.0",
    "openai>=1.12.0"
]

llm-local = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0"
]

solvers = [
    "python-sat>=0.1.8.dev1",
    "z3-solver>=4.12.0",
    "pycryptosat>=5.11.0"
]

scientific = [
    "networkx>=3.2",
    "scikit-learn>=1.4.0",
    "sympy>=1.12"
]

all = [
    "synthfuse[dev]",
    "synthfuse[bench]",
    "synthfuse[llm-cloud]",
    "synthfuse[llm-local]",
    "synthfuse[solvers]",
    "synthfuse[scientific]"
]

colab = [
    "matplotlib>=3.8.0",
    "anthropic>=0.18.0",
    "python-sat>=0.1.8.dev1",
    "tqdm>=4.66.0"
]

[project.urls]
Homepage = "https://github.com/deskiziarecords/Synth-fuse"
Repository = "https://github.com/deskiziarecords/Synth-fuse"
Issues = "https://github.com/deskiziarecords/Synth-fuse/issues"
Documentation = "https://github.com/deskiziarecords/Synth-fuse/tree/main/docs"
Changelog = "https://github.com/deskiziarecords/Synth-fuse/releases"

[project.scripts]
synthfuse = "synthfuse.tools.repl:main"
alj = "synthfuse.tools.repl:main"
sfbench = "synthfuse.systems.bench:main"
sfmonitor = "synthfuse.tools.monitor:main"
sfviz = "synthfuse.tools.viz:main"
ns-aquaforte = "synthfuse.recipes.ns_aquaforte.cli:main"

[tool.setuptools.packages.find]
include = ["synthfuse*", "alchemj*"]

[tool.setuptools.package-data]
synthfuse = [
    "recipes/**/*.py",
    "alchemj/grammar/*.lark",
    "data/benchmarks/*.cnf"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=synthfuse",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
