[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel>=0.42.0",
    "setuptools-rust>=1.8.0",
    "maturin>=1.4.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "synthfuse"
version = "0.2.0"
description = "Unified Field Engineering – A Deterministic Hybrid Organism Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "OpenGate Integrity License"}
authors = [
    {name = "J. Roberto Jiménez", email = "tijuanapaint@gmail.com"},
]
keywords = ["neurosymbolic", "jax", "hybrid-intelligence", "fusion-calculus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/deskiziarecords/synth-fuse"
Documentation = "https://synthfuse.work/docs"
Repository = "https://github.com/deskiziarecords/Synth-fuse"
Changelog = "https://github.com/deskiziarecords/Synth-fuse/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "sphinx>=7.2.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "setuptools-rust>=1.8.0",
    "maturin>=1.4.0",
]
lab = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "jupyter-server>=2.7.0",
]
notebook = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]
security = [
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
synthfuse = "synthfuse.__main__:main"
sfbench = "synthfuse.tools.bench:main"
sfwatch = "synthfuse.ingest.watcher:main"
sfcabinet = "synthfuse.cabinet.cabinet_orchestrator:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = find:

[tool.setuptools.package-data]
synthfuse = ["py.typed"]
synthfuse.alchemj = ["grammar.lark"]
synthfuse.docs = ["*.pdf"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/core.txt"]}
version = {attr = "synthfuse.__version__"}

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
