[package]
name = "synthfuse_security_core"
version = "0.2.0"
edition = "2021"

[dependencies]
# High-speed cryptographic verification for OpenGate
ring = "0.17.7" 
# Fast linear algebra for Lyapunov boundary checks
ndarray = "0.15.6"
# Python-Rust bridge
pyo3 = { version = "0.20.0", features = ["extension-module"] }
